# LLMaestro

./: .gitignore  .pre-commit-config.yaml  README.md  RolloutPlan.md  example_config.yaml  initial_prompt.md  pyproject.toml  tool_call_chain_visualization.html  visualize_tool_call_chain.py
.cursor/rules/: always_run.mdc  python_code_quality.mdc
.github/workflows/: ci.yml  generate-schemas.yml  model-connectivity.yml  publish.yml
.pre-commit-hooks/: sync_version.py
config/: README.md  example_config.yaml  schema.json  system_config.yml  user_config.yml.example
docs/: capability_based_model_selection.md  index.html  task_decomposition.md
docs/badges/: claude-2.1.json  claude-3-5-sonnet-latest.json  claude-3-5-sonnet.json  claude-3-haiku-20240229.json  claude-3-haiku-20240307.json  claude-3-haiku.json  claude-3-opus-20240229.json  claude-3-opus.json  claude-3-sonnet-20240229.json  claude-3-sonnet.json  claude-instant-1.2.json  gemini-1.5-flash.json  gemini-pro-vision.json  gemini-pro.json  gpt-3.5-turbo.json  gpt-4-turbo-preview.json  index.html
docs/changenotes/: changes_from_tool_dev_5884f30.md  changes_from_tool_dev_9edf806.md
examples/: chain_graph_cycle_test.py  cycle_detection_example.py  cycle_detection_test.py  dummy_conversation_generator.py  live_tax_processor_viz.py  live_visualization_demo.py  mock_conversation_visualizer.py  pdf_tax_processor.py  sql_tool_example.py  test_tax_visualizer.py  visualization.html  weather_tool_example.py
examples/templates/: tax_processor_viz.html
examples/visualizations/: chord_chain.html  group_chain.html  map_chain.html  nested_chain.html  parallel_chain.html  recursive_chain.html  reminder_chain.html  sequential_chain.html
llm_orchestrator/: __init__.py
llm_orchestrator/agents/: README.md  agent_pool.py
llm_orchestrator/core/: models.py  task_manager.py
llm_orchestrator/examples/: development_cycle.py
llm_orchestrator/llm/: base.py  chains.py
llm_orchestrator/prompts/: README.md  loader.py  schema.json
llm_orchestrator/utils/: storage.py
llm_orchestrator/visualization/: examples.py  visualize.py
schemas/: config.schema.json
scripts/: README_openai_capabilities_tester.md  find_persistent_models.py  generate_model_badges.py  generate_schemas.py  test_anthropic_capabilities.py  test_llm_capabilities.py  test_openai_capabilities.py  update_changelist.py  update_prompt_metadata.py  update_readme_badges.py  validate_model_connectivity.py  visualize_examples.py
src/: __init__.py  cli.py
src/agents/: README.md  agent_pool.py
src/applications/: README.md
src/core/: README.md  config.py  logging_config.py  models.py  task_manager.py
src/examples/: development_cycle.py  pdf_tax_processor.py
src/llm/: README.md  base.py  chains.py  models.py  token_utils.py
src/llmaestro/: cli.py
src/prompts/: README.md  loader.py  schema.json
src/utils/: storage.py
src/visualization/: README.md  __init__.py  chain_visualizer.py  cytoscape_config.py  cytoscape_renderer.py  examples.py  live_visualizer.py
test-results/: model_connectivity.json
test-results/badges/: claude-3-sonnet-20240229.json  gpt-3.5-turbo.json
tests/: conftest.py  fixtures.py  test_baselevel_fixtures.py  test_best_practices.md  test_chains.py  test_prompt_loader.py  test_prompt_validation.py  test_ruff_generator.py  test_task_manager.py
tests/config_files/: test_system_config.yml  test_user_config.yml
tests/fixtures/: direct_schema_response.json  nested_structure_response.json  person_response.json
tests/test_applications/: conftest.py  test_changelist_manager.py  test_funcrunner.py  test_pdf_reader.py  test_utils.py
tests/test_chains/: conftest.py  fixtures.py  test_chain_fixtures.py  test_chain_methods.py  test_tool_call_chain.py
tests/test_conf/: test_manager.py
tests/test_core/: test_task_manager.py
tests/test_default_library/: test_openai_interface.py
tests/test_fixtures/: ruff_examples.py
tests/test_integration/: test_hello_world.py  test_invoice_processor.py
tests/test_llm/: conftest.py  fixtures.py  setup_model_registry.py  test_anthropic.py  test_factory.py  test_fixtures.py  test_hello_world.py  test_invoice_extraction.py  test_llm_fixtures.py  test_model_capabilities.py  test_model_connectivity.py  test_models.py  test_structured_output.py  test_token_utils.py  test_tool_generation.py  test_tool_llm_integration.py
tests/test_prompts/: conftest.py  test_base.py  test_mixins.py  test_prompt_variables.py  test_prompts_fixtures.py
tests/test_scripts/: test_update_readme_badges.py
tests/test_session/: conftest.py  fixtures.py  test_session.py  (+1 more)
tools/: generate_schemas.py
(+168 files in other folders)
