[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "llm_orchestrator"
version = "0.1.0"
description = "A system for orchestrating LLM tasks that exceed context limits"
authors = ["Your Name <your.email@example.com>"]
readme = "README.md"
packages = [{include = "llm_orchestrator"}]

[tool.poetry.dependencies]
python = "^3.11"
pydantic = "^2.0.0"
litellm = "^1.0.0"
beautifulsoup4 = "^4.12.0"  # Required for test_ruff_generator.py
py4cytoscape = "^1.5.0"     # For chain visualization
pandas = "^2.0.0"           # Required by py4cytoscape
networkx = "^3.0"           # For graph operations

[tool.poetry.group.dev.dependencies]
pytest = "^7.0.0"
pytest-asyncio = "^0.21.0"
ruff = "^0.1.0"

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
python_files = ["test_*.py"]

[tool.ruff]
line-length = 100
target-version = "py311"
select = ["E", "F", "B", "I"]
ignore = []
